@@ -51,6 +51,10 @@ Noteworthy changes in release 1.4
 * New functions fai_load3() and fai_build3() allow fasta indexes to be
   stored in a different location to the indexed fasta file.
 
+* New functions bgzf_index_dump_hfile() and bgzf_index_load_hfile()
+  allow bgzf index files (.gzi) to be written to / read from an existing
+  hFILE handle.
+
 Noteworthy changes in release 1.3.2  (13 September 2016)
 
 * Corrected bin calculation when converting directly from CRAM to BAM.
